# hard-negatives

./: .gitignore  README.md  main.py  pyproject.toml
src/hard_negatives/: args.py  data_loader.py  embed.py  index_factory.py  mine_negatives.py  nv_retriever.py  prepare_model.py  reporting.py  save_dataset.py  upload_dataset.py
src/hard_negatives/args/: voyager_args.py
tests/: test_mining.py
