[project]
name = "hard-negatives"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "flash-attn>=2.8.3.post1",
    "psutil>=7.2.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
    "voyager>=2.1.0",
]
