[project]
name = "hard-negatives"
version = "0.1.8"
description = "Mine hard negatives from text datasets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "flash-attn>=2.8.3.post1",
    "ninja>=1.13.0",
    "packaging>=26.2",
    "psutil>=7.2.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
    "usearch>=2.26.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
# The docs suggest this ensures a wheel install, but it actually forces a hollow install if no wheel is found.
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
